<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ui.articles.viewArticles.ArticlesDetailsActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleInputLayout"
            style="@style/ArticlesDetailsInputLayoutTheme"

            app:endIconMode="none"
            android:layout_marginBottom="8dp"
            android:hint="@string/articleDetailsTitleText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEt"
                style="@style/PrimaryEtTheme"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bodyInputLayout"
            style="@style/ArticlesDetailsInputLayoutTheme"
            android:layout_marginBottom="8dp"
            android:hint="@string/articleDetailsBodyText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bodyEt"
                style="@style/PrimaryEtTheme"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descInputLayout"
            style="@style/ArticlesDetailsInputLayoutTheme"
            android:layout_marginBottom="8dp"
            android:hint="@string/articleDetailsDescText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descEt"
                style="@style/PrimaryEtTheme"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:elevation="05dp"
            app:cardCornerRadius="05dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:orientation="vertical"
                android:padding="15dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatarImgView"
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

                <TextView
                    android:id="@+id/authorTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    tools:text="usernsme" />

                <TextView
                    android:id="@+id/dateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    tools:text="December 15, 2020" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/aboutAuthor"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/black"

                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="05dp"
            android:indeterminateTint="@color/purple_500"
            android:visibility="gone" />


    </LinearLayout>

</ScrollView>